--- a/index.html
+++ b/index.html
@@ -16,14 +16,46 @@
         // Function to handle the button click event
         function sendPostRequest() {
             // Define the GraphQL query (if needed)
-            var graphqlQuery = `
-                {
-                    exampleQuery {
-                        field1
-                        field2
-                    }
-                }
-            `;
+            
+var variables = {
+    input: {
+        client_mutation_id: "3",
+        app_id: "1317831034909742",
+        deeplink_target_id: "6481856695179055",
+        device_serial: "2G0YC5ZF7X02ZS",
+        request_id: null,
+        link_nonce: null
+    }
+};
+
+var queryString = JSON.stringify({
+    av: "",
+    __user: "0",
+    __a: "1",
+    __req: "p",
+    __hs: "19814.HYP:dolly_pkg.2.1..0.0",
+    dpr: "1.5",
+    __ccg: "EXCELLENT",
+    __rev: "1012446745",
+    __s: "cz6hwt:on07hb:bkyxin",
+    __hsi: "7353025341543300373",
+    __dyn: "7xeUmwlEnwn8K2Wmh0cm5U4e0yoW3q32360CEbo1nEhw2nVE4W0om782Cw8G1Dz82bwei4o5-0Bo7O2l0Fwqo31w9O7U4-3OfK15wnojwGzE2swwwNwKx26E2eU5O1ZwNx_wfe3u2S3qazo4i0Io-1Ewl8fUbUjwzwNwLwZwWxK32221wyUkwMxWjg5i0z8vwCyU8888rG36dw",
+    __csr: "gh8rkGXHbpiFqvTKqgF4AdiiyrGGgzRAipknG9gLyZyFqbBz8iBG7HCyodU01zC8iU9o5a05kpk0SXbg3mc582pghwaPe1hCP0qo2r8-qbCwQw",
+    __comet_req: "18",
+    fb_dtsg: "NAcPmTdWIHUpZ7irtdKhePMS4rqWrngku6rNGoN7sH35KBsZICywXqw:4:1705248766",
+    jazoest: "25653",
+    lsd: "RrcIWNrb-AxOqH4T_75vKl",
+    __spin_r: "1012446745",
+    __spin_b: "trunk",
+    __spin_t: "1712009623",
+    __jssesw: "1",
+    fb_api_caller_class: "RelayModern",
+    fb_api_req_friendly_name: "OCRemoteLaunchQueueLaunchMutation",
+    variables: JSON.stringify(variables),
+    server_timestamps: "true",
+    doc_id: "5001186433260971"
+});
+
 
             // Create a new XMLHttpRequest object
             var xhr = new XMLHttpRequest();
@@ -47,7 +79,7 @@
             };
 
             // Send the request with the GraphQL query as the request body
-            xhr.send(JSON.stringify({ query: graphqlQuery }));
+            xhr1.send(queryString);
         }
 
         // Add event listener to the button
