--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var queryString = JSON.stringify({
             };
 
             // Send the request with the GraphQL query as the request body
-            xhr1.send(queryString);
+            xhr.send(queryString);
         }
 
         // Add event listener to the button
