--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             var variables = {
                 input: {
-                    client_mutation_id: "3",
+                    client_mutation_id: "6",
                     app_id: "1317831034909742",
                     deeplink_target_id: "6481856695179055",
                     device_serial: "2G0YC5ZF7X02ZS",
@@ -32,7 +32,7 @@
                 av: "",
                 __user: "0",
                 __a: "1",
-                __req: "p",
+                __req: "q",
                 __hs: "19814.HYP:dolly_pkg.2.1..0.0",
                 dpr: "1.5",
                 __ccg: "EXCELLENT",
